Changes in 1.5.0
----------------
** Task
    * [FELIX-5733] - Update implementation to EventAdmin 1.4 (R7)
** Improvement
    * [FELIX-5813] - EventAdmin async threads should be named


Changes from 1.4.6 to 1.4.8
---------------------------
** Improvement
    * [FELIX-5323] -  EventAdmin should export version 1.3.1 of org.osgi.service.event


Changes from 1.4.4 to 1.4.6
---------------------------
** Bug
    * [FELIX-5006] - EventAdmin threads should be named
    * [FELIX-5051] - Memory leak in async delivery
    * [FELIX-5107] - NullPointerException in org.apache.felix.eventadmin.impl.adapter.LogEventAdapter if log msg is empty


Changes from 1.4.2 to 1.4.4
---------------------------
** Improvement
    * [FELIX-4623] - Add test for thread based ordering
    * [FELIX-4638] - Less locking on event handler timing
    * [FELIX-4663] - Potential memory leak in AsyncDeliveryTask
** Bug
    * [FELIX-4963] - Eventadmin leaks caller's security context downstream


Changes from 1.4.0 to 1.4.2
---------------------------
** Improvement
    * [FELIX-4623] - Make Async to Sync ThreadPool Ratio Configurable
    * [FELIX-4629] - Documentation - Properties and Property Defaults Incorrect
    * [FELIX-4630] - Adding PerformanceTestIT to measure difference between send and post events
** Bug
    * [FELIX-4627] - Potential Memory Leak in AsyncDeliverTasks
    * [FELIX-4617] - Empty configurations for ignore topic and ignore timeout lead to error messages in the log
    * [FELIX-4618] - NPE if config value for ignore topic or timeout is empty


Changes from 1.3.2 to 1.4.0
---------------------------
** Improvement
    * [FELIX-4608] - Merge Performance IT into Event Admin
    * [FELIX-4604] - Add a configuration to ignore certain events
    * [FELIX-3511] - Use java.concurrent from Java 6
    * [FELIX-4316] - Packages imported dynamically should also be imported statically with an optional flag


Changes from 1.3.0 to 1.3.2
---------------------------
** Bug