@@ -18,10 +18,10 @@
  */
 package org.apache.felix.eventadmin.impl.handler;
 
-import org.apache.felix.eventadmin.impl.handler.EventHandlerTracker.Matcher;
 import org.apache.felix.eventadmin.impl.tasks.AsyncDeliverTasks;
 import org.apache.felix.eventadmin.impl.tasks.DefaultThreadPool;
 import org.apache.felix.eventadmin.impl.tasks.SyncDeliverTasks;
+import org.apache.felix.eventadmin.impl.util.Matchers;
 import org.osgi.framework.BundleContext;
 import org.osgi.service.event.Event;
 import org.osgi.service.event.EventAdmin;
@@ -51,7 +51,7 @@ public class EventAdminImpl implements EventAdmin
     private final SyncDeliverTasks m_sendManager;
 
     // matchers for ignore topics
-    private Matcher[] m_ignoreTopics;
+    private Matchers.Matcher[] m_ignoreTopics;
 
     /**
      * The constructor of the <tt>EventAdmin</tt> implementation.
@@ -76,7 +76,7 @@ public class EventAdminImpl implements EventAdmin
         this.tracker.open();
         m_sendManager = new SyncDeliverTasks(syncPool, timeout);
         m_postManager = new AsyncDeliverTasks(asyncPool, m_sendManager);
-        m_ignoreTopics = EventHandlerTracker.createMatchers(ignoreTopics);
+        m_ignoreTopics = Matchers.createEventTopicMatchers(ignoreTopics);
     }
 
     /**
@@ -100,7 +100,7 @@ public class EventAdminImpl implements EventAdmin
         boolean result = true;
         if ( this.m_ignoreTopics != null )
         {
-            for(final Matcher m : this.m_ignoreTopics)
+            for(final Matchers.Matcher m : this.m_ignoreTopics)
             {
                 if ( m.match(event.getTopic()) )
                 {
@@ -169,7 +169,7 @@ public class EventAdminImpl implements EventAdmin
         this.tracker.update(ignoreTimeout, requireTopic);
         this.m_sendManager.update(timeout);
         this.tracker.open();
-        this.m_ignoreTopics = EventHandlerTracker.createMatchers(ignoreTopics);
+        this.m_ignoreTopics = Matchers.createEventTopicMatchers(ignoreTopics);
     }
 
     /**
